[gd_scene load_steps=5 format=3 uid="uid://ow1q4unc5k5a"]

[ext_resource type="Script" uid="uid://l46lkk0m1r3i" path="res://meshmaker.gd" id="1_wk7nh"]
[ext_resource type="ArrayMesh" uid="uid://cq5dynh2kw4j7" path="res://CombinedAntMesh.tres" id="2_yn64c"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7p42d"]
top_radius = 0.003
bottom_radius = 0.003
height = 0.025

[sub_resource type="CylinderMesh" id="CylinderMesh_wk7nh"]
top_radius = 0.001
bottom_radius = 0.003
height = 0.025

[node name="Node3D" type="Node3D"]
script = ExtResource("1_wk7nh")

[node name="CombinedAntMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.75, 0, 0, 0, 1.75, 0, 0, 0, 1.75, 0, 0, 0)
mesh = ExtResource("2_yn64c")

[node name="fang" type="MeshInstance3D" parent="."]
transform = Transform3D(0.996512, -0.0834518, 3.64779e-09, -2.2303e-15, -4.37114e-08, -1, 0.0834518, 0.996512, -4.35589e-08, 0.0244176, 0, -0.0729664)
mesh = SubResource("CylinderMesh_7p42d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.801911, -0.597443, 2.61151e-08, 0, -4.37114e-08, -1, 0.597443, -0.801911, 3.50527e-08, 0.0184521, 0, -0.09375)
mesh = SubResource("CylinderMesh_wk7nh")

[node name="fang2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.996493, 0.0836779, -3.65767e-09, 0, -4.37114e-08, -1, -0.0836779, 0.996493, -4.35581e-08, -0.024, 0, -0.073)
mesh = SubResource("CylinderMesh_7p42d")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.801776, 0.597625, -2.6123e-08, 0, -4.37114e-08, -1, -0.597625, -0.801776, 3.50467e-08, -0.018, 0, -0.094)
mesh = SubResource("CylinderMesh_wk7nh")
